[package]
name = "weather-forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-static-files = "4.0.1"
openweathermap = "0.2.4"
openweathermap_client = "0.2.0"
reqwest = {version = "0.11.22", features = ["json"]}
serde = "1.0.192"
tokio = { version = "1.34.0", features = ["full"] }
warp = "0.3.6"
